@@ -33,8 +33,16 @@ import org.more.xml.stream.XmlStreamEvent;
  */
 class InnerMimeTypeContext extends ConcurrentHashMap<String, String> implements MimeType {
     private static final long serialVersionUID = -8955832291109288048L;
+    private Object            content;
     public InnerMimeTypeContext(Object content) {
-        // TODO Auto-generated constructor stub 
+        this.content = content;
+    }
+    public void setContent(Object content) {
+        this.content = content;
+    }
+    @Override
+    public Object getContent() {
+        return this.content;
     }
     public String getMimeType(String suffix) {
         return this.get(suffix);
