@@ -6,6 +6,7 @@
     02.Fix，classcode模块对long、float、double基本类型错误处理的问题。
     03.AbstractEnvironment类的initEnvironment方法增加Settings类型参数。createSettings方法不再属于AbstractEnvironment的抽象方法。
     04.StandardEnvironment类增加Settings类型参数的构造方法。
+    05.MimeType接口增加getContent()方法。
 
 ===== Hasor-Core v1.2.0
 * 新增:
